fix z-index, fix gaps

--- a/styles/css/pages/main.css
+++ b/styles/css/pages/main.css
@@ -1004,10 +1004,10 @@ body {
   }
 }
 .contacts-window__wrapper {
+  z-index: -1;
   position: fixed;
   bottom: 10px;
   right: 0px;
-  border: 1px solid black;
   width: 100vw;
   height: 555px;
   transition: all 0.5s;
@@ -1022,15 +1022,15 @@ body {
 .contacts-window__wrapper .contacts-window__container {
   z-index: -1;
   overflow: hidden;
-  padding: 40px 15px 0px 15px;
+  padding: 30px 15px 0px 15px;
   display: flex;
-  gap: 30px;
+  gap: 50px;
   flex-direction: column;
   position: absolute;
   right: -150px;
   bottom: -189px;
   background: #1c313a;
-  border: 1px solid black;
+  border-radius: 20px;
   transform: scale(0.01);
   transition: transform 0.3s, right 0.5s, bottom 0.5s;
 }
@@ -1056,7 +1056,7 @@ body {
 .contacts-window__wrapper .contacts-window__container .contacts-window__connect {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 15px;
 }
 .contacts-window__wrapper .contacts-window__container .contacts-window__connect .contacts-window__icons-container {
   display: flex;
