--- a/styles/sass/components/_contacts-window.scss
+++ b/styles/sass/components/_contacts-window.scss
@@ -11,10 +11,10 @@ $border-color: #f5f5f6;
     
   }
 .contacts-window__wrapper {
+    z-index: -1;
     position: fixed;
     bottom: 10px;
     right: 0px;
-    border: 1px solid black;
     width: 100vw;
     height: 555px;
     transition: all 0.5s;
@@ -28,15 +28,15 @@ $border-color: #f5f5f6;
     .contacts-window__container {
         z-index: -1;
         overflow: hidden;
-        padding: 40px 15px 0px 15px;
+        padding: 30px 15px 0px 15px;
         display: flex;
-        gap: 30px;
+        gap: 50px;
         flex-direction: column;
         position: absolute;
         right: -150px;
         bottom: -189px;
         background: #1c313a;
-        border: 1px solid black;
+        border-radius: 20px;
         transform: scale(0.01);
         transition: transform 0.3s, right 0.5s, bottom 0.5s;
         &.open {
@@ -59,7 +59,7 @@ $border-color: #f5f5f6;
         .contacts-window__connect {
             display: flex;
             flex-direction: column;
-            gap: 10px;
+            gap: 15px;
 
             .contacts-window__icons-container {
                 display: flex;
@@ -113,6 +113,7 @@ $border-color: #f5f5f6;
             flex-direction: column;
             gap: 20px;
             position: relative;
+            .contacts-window__h2{}
             .contacts-window__border-main {
                 overflow: hidden;
                 width: 305px;
